[package]
name = "rust_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
actix-web = "4"  # or rocket = "0.5" for Rocket framework
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ethers = { version = "0.6", features = ["tokio"] }
dotenv = "0.15"  # For environment variable management
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] }
rocket = "0.5.0-rc.1"


